Code spacing corrections and fixed background on about-page

--- a/src/components/About/_OurDealers.sass
+++ b/src/components/About/_OurDealers.sass
@@ -1,24 +1,23 @@
 .dealers-container
    height: 400px
+   padding: $about-content-spacing
 
    .dealers-subtitle
-      font-family: Heebo
-      font-weight: 500
+      color: $about-subtitle
       font-size: 14px
+      font-weight: 500
+      letter-spacing: 0.2em
       line-height: 21px
       text-align: center
-      letter-spacing: 0.2em
-      color: $about-subtitle
 
    .dealers-title
-      font-family: Heebo
+      color: $about-title1
       font-size: 42px
       line-height: 62px
-      text-align: center
-      color: $about-title1
       margin-bottom: $about-title-margin-bottom
+      text-align: center
 
    .dealer-logos
-      width: 100%
       display: flex
       justify-content: space-around
+      width: 100%
