--- a/src/components/About/_OurStory.sass
+++ b/src/components/About/_OurStory.sass
@@ -5,26 +5,21 @@
    .story-subtitle
       color: $about-subtitle
       font-size: $about-subtitle-size
-      font-family: Heebo
-      font-style: normal
-      font-weight: 500
       font-size: 14px
-      line-height: 21px
+      font-weight: 500
       letter-spacing: 0.2em
+      line-height: 21px
 
    .story-title
       color: $about-title1
       font-size: $about-title-size
-      margin-bottom: $about-title-margin-bottom
-      font-family: Heebo
       font-size: 42px
       line-height: 62px
+      margin-bottom: $about-title-margin-bottom
 
    .story-body
       color: #4F4F4F
       font-size: 16px
-      font-family: 'Heebo'
-      font-size: 16px
       line-height: 180%
-      text-align: center
       white-space: pre-wrap
+      padding: $about-content-spacing
