--- a/src/components/About/_OurValues.sass
+++ b/src/components/About/_OurValues.sass
@@ -2,44 +2,40 @@
    height: 434px
 
    .values-subtitle
-      font-family: Heebo
-      font-weight: 500
-      font-size: $about-subtitle-size
-      line-height: 21px
-      text-align: center
-      letter-spacing: 0.2em
       color: $about-subtitle
+      font-size: $about-subtitle-size
+      font-weight: 500
+      letter-spacing: 0.2em
+      line-height: 21px
 
    .values-title
-      font-family: Heebo
+      color: $about-title2
       font-size: $about-title-size
       line-height: 62px
-      text-align: center
       margin-bottom: $about-title-margin-bottom
-      color: $about-title2
 
    li
-      height: 200px
+      align-items: center
       display: flex
       flex-direction: column
+      height: 200px
       justify-content: space-evenly
-      align-items: center
 
       .values-icon
          color: $about-value-icons
+         margin-bottom: 8px
 
       .values-item-title
-         font-family: Heebo
-         font-weight: 500
-         font-size: 16px
-         line-height: 23px
          color: $about-title2
+         font-size: 16px
+         font-weight: 500
+         line-height: 23px
 
       .values-item-description
-         width: 250px
-         font-family: Heebo
+         color: #828282
          font-size: 12px
          line-height: 18px
+         min-height: 88px
          text-align: center
-         color: #828282
          white-space: pre-wrap
+         width: 250px
