--- a/src/components/Layouts/all.sass
+++ b/src/components/Layouts/all.sass
@@ -32,6 +32,7 @@ $about-title2: #03A62C
 $about-title-size: 42px
 $about-title-margin-bottom: 30px
 $about-value-icons: #4D508C
+$about-content-spacing: 0 8%
 
 $kos-card-gray: #E5E5E5
 $kos-header-black: #4F4F4F
